[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
]
line-length = 120
ignore = ["E741", "E721"]
select = ["E", "F", "I"]

[tool.poetry]
name = "cellavi"
version = "1.0.0"
description = "Variational Inference for single-cell transcriptomics - c'est la vie"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
homepage = "https://github.com/gui11aume/cellavi"
authors = ["Guillaume Filion <guillaume.filion@gmail.com>"]
packages = [{include = "cellavi", from="src"}]

[tool.poetry.dependencies]
python = ">=3.8.10,<4.0.0"
torch = ">=2.0.0"
pyro-ppl = ">=1.8.6"
deepspeed = ">=0.11.1"
lightning = ">=2.1.0"

[tool.poe.tasks]
test = "poetry run pytest test/"
test_cov = "poetry run pytest -v --cov=./src/ test/"
format = "black --include \\.py src"
check_format = "black --include \\.py src --check"
lint = "flake8"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
poethepoet = "^0.20.0"
lxml-stubs = "^0.4.0"
dvc = "^3.25.0"
dvc-s3 = "^2.23.0"
tensorboard = "2.13.0"


[tool.pytest.ini_options]
testpaths = [
    "test",
]
